--- a/pages/Release/join_res/join_res.wxml
+++ b/pages/Release/join_res/join_res.wxml
@@ -48,3 +48,30 @@
     </view>
   </view>
 </view>
+
+<view class='mask'>
+    <view class='mask_main'>
+        <view class='main_userGroup'>
+            <view class='startZuo'>
+              <text class='iconfont icon-baiyangzuo'></text>
+              <text class='startTitle'>白羊座</text>
+            </view>
+            <view class='perSonl'>
+              <image class='per_sonl' src='https://wx.qlogo.cn/mmopen/vi_32/QicRsQg7tSzicuibpz04DgqOMTkXl71HiaianRrLmrpTtkF21GlqQicpugbcpWyoML6eVjW57bACVKNd2b5vbrS2Ty7w/0'>
+
+              </image>
+              <view class='sex'>
+                <text class='iconfont icon-nan' style='font-size:40rpx;'></text>
+              </view>
+              <view class='per_title'>仇益阳</view>
+            </view>
+            <view class='birthday'>
+
+            </view>
+        </view>
+        <view class='main_botton'>
+          <view class='changeCard'>交换名片</view>
+          <view class='sendGift'>送TA礼物</view>
+        </view>
+    </view>
+</view>
