--- a/template/template.wxss
+++ b/template/template.wxss
@@ -1193,7 +1193,7 @@
 
 .pl_list {
   width: 100%;
-  height: 100rpx;
+  /* height: 100rpx; */
   box-sizing: border-box;
   padding: 32rpx;
 }
@@ -1214,6 +1214,11 @@
   font-size: 28rpx;
   font-family: PingFang-SC-Medium;
   color: rgba(51, 51, 51, 1);
+  display: flex;
+  align-items: center;
+}
+.pl_name .iconfont{
+  font-size: 28rpx;
 }
 
 .pl_data {
