--- a/template/template.wxss
+++ b/template/template.wxss
@@ -758,10 +758,12 @@
   font-size: 20rpx;
 }
 
-.icon-bofang11 {
+.icon-bofang11,.icon-tingzhi,.icon-zanting{
   font-size: 88rpx;
   color: RGBA(74, 144, 226, 1);
 }
+
+
 
 .tryLisen {
   width: 233rpx;
@@ -1241,4 +1243,39 @@
   font-size: 26rpx;
   font-family: PingFang-SC-Medium;
   color: rgba(102, 102, 102, 1);
+}
+
+
+.myaudio{
+  width: 492rpx;
+  height: 88rpx;
+  background-color: RGBA(40, 213, 203, 1);
+  border-radius: 20rpx;
+  margin-left: 24rpx;
+  margin-top: 24rpx;
+  box-sizing: border-box;
+  padding: 0rpx 30rpx;
+  display: flex;
+  align-items: center;
+}
+.mai{
+  width: 48rpx;
+  height: 48rpx;
+}
+.shengyin{
+  width: 48rpx;
+  height: 48rpx;
+}
+.myaudio_time{
+  margin-left: auto;
+  font-size:28rpx;
+font-family:PingFang-SC-Medium;
+color:rgba(255,255,255,1);
+}
+.myvideo{
+  width: 320rpx;
+  height: 320rpx;
+  background-color: RGBA(40, 213, 203, 1);
+  margin-left: 24rpx;
+  margin-top: 24rpx;
 }
